# csc581cloud

./: .gitignore  README.md  docker-compose.yml  flake.nix  resume.docx  rust-toolchain.toml
api/: Cargo.toml  Dockerfile
api/src/: api.rs  core.rs  counter.rs  main.rs  ui.rs
