[package]
name = "service-status-api"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "warn"

[dependencies]
axum = "0.8"
redis = { version = "0.32", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
